# app/Http/Requests/Page/UpdatePageRequest.php
@@ -3,6 +3,7 @@
 namespace App\Http\Requests\Page;
 
 use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Validation\Rule;
 
 class UpdatePageRequest extends FormRequest
 {
@@ -22,7 +23,9 @@ class UpdatePageRequest extends FormRequest
     public function rules(): array
     {
         return [
-            //
+            'name' => 'nullable|max:255',
+            'code' => 'filled|max:65536',
+            'layout_id' => 'nullable|' . Rule::exists('layouts', 'id'),
         ];
     }
 }
